tests/build/cases/ui_node/delegate_expr_error_incorrect_type_child.rs
use zero_ui::core::{ui_node, UiNode};

struct NotANode;

struct MyNode {
    child: NotANode,
}

#[ui_node(child)]
impl UiNode for MyNode {}

fn main() {}
